@startuml
title Class Diagram for DeleteCategoryCommand Feature
skinparam classAttributeIconSize 0
hide circle
left to right direction

class "{abstract}\nCommand" as Command {
  + execute(inventory: Inventory, ui: UI)
}

class DeleteCommandParser {
  + parse(input: String)
}

class DeleteCategoryCommand {
  - categoryName: String
  + execute(inventory: Inventory, ui: UI)
}

class Inventory {
  + findCategoryByName(categoryName: String)
}

class Category {
  - name: String
  + isEmpty(): boolean
  + getItemCount(): int
  + getItems()
}

class Item {
  - name: String
  - quantity: int
}

class UI {
  + showDeleteCategoryConfirmation(...)
  + showDeleteCategoryCancelled(...)
  + showCategoryItemsCleared(...)
  + showCategoryDeleted(...)
  + showCategoryNotFound(...)
  + readCommand()
}

Command <|-- DeleteCategoryCommand
DeleteCommandParser ..> DeleteCategoryCommand : creates
DeleteCategoryCommand --> Inventory : queries
DeleteCategoryCommand --> Category : clears
DeleteCategoryCommand --> UI : displays through
Inventory "1" o-- "*" Category
Category "1" o-- "*" Item
@enduml
